erDiagram
    %% Admin-related entities

    DISH {
        dish_id INT PK
        name VARCHAR UK
        description TEXT
        price FLOAT
        image_name VARCHAR
        station VARCHAR
        category VARCHAR
        preparation_time INT
    }

    INGREDIENT {
        ingredient_id INT PK
        name VARCHAR UK
        in_stock_qty INT
    }

    USER {
        user_id INT PK
        name VARCHAR
        user_name VARCHAR UK
        password VARCHAR
        email VARCHAR
        role VARCHAR
        created_at DATETIME
        updated_at DATETIME
    }
    USER ||--|{ INGREDIENT : Creates
    DISH ||--|{ INGREDIENT: Contains
    USER ||--|{ DISH : Creates
